--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam accusantium doloribus voluptas consequuntur quasi, possimus adipisci magni a dolorem quia tempora esse facilis, quae dignissimos quisquam expedita debitis similique sapiente.</p>
 </body>
+
 </html>
