dodano paragraf trzeci

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam accusantium doloribus voluptas consequuntur quasi, possimus adipisci magni a dolorem quia tempora esse facilis, quae dignissimos quisquam expedita debitis similique sapiente.</p>
+    <p>paragraf trzeci</p>
 </body>
 
 </html>
