dodano nowt paragraf

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam accusantium doloribus voluptas consequuntur quasi, possimus adipisci magni a dolorem quia tempora esse facilis, quae dignissimos quisquam expedita debitis similique sapiente.</p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias, voluptas tempore molestiae aspernatur cupiditate, fugiat est iure eaque facere numquam saepe perspiciatis rerum omnis obcaecati aut necessitatibus cum dicta.</p>
+    <p>paragraf czwarty</p>
+
 </body>
 
 </html>
